--- a/srchybrid/lang/de_DE.rc
+++ b/srchybrid/lang/de_DE.rc
@@ -497,7 +497,6 @@ BEGIN
     IDS_PW_USS              "Serverliste beim Programmstart aktualisieren"
     IDS_PW_MISC             "Verschiedene Optionen"
     IDS_PW_TRAY             "Zum Systemicon minimieren"
-    IDS_PW_BEEP             "Piepton bei Fehler"
     IDS_PW_PROMPT           "Sicherheitsabfrage bei Programmbeendigung"
 END
 
@@ -725,7 +724,6 @@ END
 
 STRINGTABLE 
 BEGIN
-    IDS_UPDATEQUEUE         "Warteschlangenliste nicht in Echtzeit aktualisieren"
     IDS_RECOVER_SINGLE      "1 Datei restauriert."
     IDS_RECOVER_MULTIPLE    "%u Dateien restauriert."
     IDS_ATTEMPTING_RECOVERY "Versuche Archiv-Restaurierung..."
@@ -1080,7 +1078,6 @@ STRINGTABLE
 BEGIN
     IDS_ERR_TOOLARGEFILE    "Datei ist größer als vom Edonkey Protokoll unterstützt (>=256GB)"
     IDS_MSGONLYFRIENDS      "Nur von Freunden akzeptieren"
-    IDS_MSGONLYSEC          "Nur von gültigen Clients akzeptieren"
     IDS_DAY_MO_SA           "Mo-Sa"
     IDS_LIMITSOURCES        "Max. Quellen"
     IDS_LIMITCONS5SEC       "Max. neue Verb./5sek"
@@ -1130,7 +1127,6 @@ BEGIN
     IDS_DL_RESUMENEXT       "Nächste pausierte Datei fortsetzen"
     IDS_STARTPRIO           "Priorität dieser Kategorie"
     IDS_PREF_STARTNEXTFILECAT "Gleiche Kategorie bevorzugen"
-    IDS_REPAINTGRAPHS       "Statistikgraphen bei Fensteränderung nicht neu berechnen"
     IDS_SOFTFILES           "Dateilimit (weich)"
     IDS_HARDFILES           "Dateilimit (hart)"
     IDS_FILTER              "Filter" //!
@@ -1549,7 +1545,6 @@ END
 STRINGTABLE 
 BEGIN
     IDS_LOG_LEVEL           "Log Level"
-    IDS_DISABLEPEERACHE     "Download von PeerCache deaktivieren"
     IDS_NEWMSG              "Neue Nachricht von '%s' (IP:%s)"
     IDS_PREF_STARTNEXTFILECATONLY "Nur aus gleicher Kategorie"
     IDS_LOG_ULDL_EVENTS     "Logge Upload/Download Ereignisse"
@@ -1641,7 +1636,7 @@ BEGIN
     IDS_LD_COPYCLIPBOARD    "In Zwischenablage kopieren"
     IDS_LD_HOSTNAME         "Benutze Hostnamen (aus den Einstellungen) anstatt der IP, wenn eD2K-Links mit Quelle erstellt werden"
     IDS_SAVEACFAILED        "AICH Hashset konnte nicht gespeichert werden!"
-    IDS_IACHHASH            "AICH Hash" //!
+    IDS_AICHHASH            "AICH Hash" //!
     IDS_BYTESPERSEC         "B/s"			//!
     IDS_KBYTESPERSEC        "KB/s"		//!
     IDS_MBYTESPERSEC        "MB/s"		//!
@@ -1951,6 +1946,32 @@ BEGIN
     IDS_RESOLVELINKS        "Shell-Links in freigegebenen Verzeichnissen auflösen"
 END
 
+
+STRINGTABLE 
+BEGIN
+    IDS_DOWNLOADCOMMANDS    "Downloadbefehle"
+    IDS_CLOSETOOLBAR        "Schließe Toolbar"
+    IDS_SHOWTOOLBAR         "Zeige Toolbar"
+    IDS_SEARCH_BADOPERATORCOMBINATION 
+                            "Du darfst bei Suchanfragen an KAD nicht im ersten Schlüsselwort einen ODER-Operator (OR) nutzen!\n\nZum Beispiel ""Keyword1 OR Keyword2"" ist nicht möglich. Nutze stattdessen ""Keyword1 AND (Keyword2 OR Keyword3)"" oder führe mehrere Suchen durch."
+    IDS_DISCOVEREDBY        "Entdeckt von"
+    IDS_NODES               "Knoten"
+    IDS_ROUTINGTABLE        "Routingtabelle"
+    IDS_PROTOCOLVERSION     "Protokollversion"
+    IDS_FOUNDNODESUSEFUL    "gefundene Knoten (nützliche)"
+    IDS_NORESPONSE          "keine Antwort"
+    IDS_NOTASKED            "nicht angefragt"
+    IDS_LOOKUPGRAPH         "Suchdetails"
+    IDS_AUTOKADLOOKUPGRAPH  "automatisch aktive Suchen anzeigen"
+    IDS_PAUSEONPREVIEW      "Pausiere wenn Vorschau möglich"
+    IDS_PREVIEWWITH         "Vorschau mit"
+    IDS_CLOSEEMULE          "eMule beenden"
+    IDS_DONOTASKAGAIN       "nicht erneut nachfragen"
+    IDS_POPULARITY          "Popularitätsrang"
+    IDS_SHOWWIN7TASKBARGOODIES "Aktiviere Windows7 Taskbareffekte"
+    IDS_LANMODE             "LAN Modus"
+    IDS_OPENPREFINI         "Öffne preferences.ini"
+END
 
 STRINGTABLE 
 BEGIN
