--- a/srchybrid/lang/va_ES_RACV.rc
+++ b/srchybrid/lang/va_ES_RACV.rc
@@ -499,7 +499,6 @@ BEGIN
     IDS_PW_USS              "Actualisar automàticament llistat a l'inici"
     IDS_PW_MISC             "Miscelànea"
     IDS_PW_TRAY             "Minimis&ar"
-    IDS_PW_BEEP             "Beep en cas d'erro"
     IDS_PW_PROMPT           "Confirmar eixida"
     IDS_PW_SPLASH           "Vore pantalla d'inici"
     IDS_PW_DBLCLICK         "Expandir llista en doble clic"
@@ -699,7 +698,6 @@ END
 STRINGTABLE 
 BEGIN
     IDS_DOWNLOADMOVIECHUNKS "Intentar descarregar els extrems primer"
-    IDS_UPDATEQUEUE         "No actualisar la llista de la Coa en Temps Real"
     IDS_RECOVER_SINGLE      "1 archiu recuperat."
     IDS_RECOVER_MULTIPLE    "%u archius recuperats."
     IDS_ATTEMPTING_RECOVERY "Recuperant archiu..."
@@ -1091,7 +1089,6 @@ BEGIN
     IDS_WEB_BADLOGINATTEMPT "Webserver: Intent de Login fallat"
     IDS_ERR_TOOLARGEFILE    "Archiu mes gran que el que soporta el protocol  \neDonkey(>=256GB)"
     IDS_MSGONLYFRIENDS      "Acceptar només d'amics"
-    IDS_MSGONLYSEC          "Acceptar només de clients vàlits"
     IDS_DAY_MO_SA           "Dil-Dis"
     IDS_LIMITSOURCES        "Llimitar fonts"
     IDS_LIMITCONS5SEC       "Llímit conexions/5segs"
@@ -1141,7 +1138,6 @@ BEGIN
     IDS_DL_RESUMENEXT       "Continuar en el següent en pausa"
     IDS_STARTPRIO           "Prioritat per ad esta categoria"
     IDS_PREF_STARTNEXTFILECAT "Preferir la mateixa categoria"
-    IDS_REPAINTGRAPHS       "No redibuixar gràfics d'estadístiques al canviar  \ntamany"
     IDS_SOFTFILES           "Llímit d'archiu baix"
 END
 
@@ -1561,7 +1557,6 @@ BEGIN
     IDS_FO_PREF_FAILED      "¡Erro al configurar el tallafocs intern de WinXP per als ports seleccionats!"
     IDS_FO_PREF_STARTUP     "Obrir/tancar ports en el tallafocs de WinXP quan s'inicia i tanca l'eMule"
     IDS_LOG_LEVEL           "Nivell de registre"
-    IDS_DISABLEPEERACHE     "Desactivar descarrega des de PeerCache"
     IDS_SOURCESWAPBLOCKED   "Intercanvi bloquejat"
     IDS_A4AF_CHECK_THIS_NOW "Comprovar esta font ara (debug)"
     IDS_NEWMSG              "Nou Mensage de '%s' (IP:%s)"
@@ -1653,7 +1648,7 @@ BEGIN
     IDS_LD_COPYCLIPBOARD    "Copiar al Portapapers"
     IDS_LD_HOSTNAME         "Usar hostname, des de Preferències, en conte de la IP quan se crea un enllaç de font"
     IDS_SAVEACFAILED        "¡Erro al guardar conjunt de hash AICH!"
-    IDS_IACHHASH            "Hash AICH"
+    IDS_AICHHASH            "Hash AICH"
     IDS_BYTESPERSEC         "B/s"//!
     IDS_KBYTESPERSEC        "kB/s"//!
     IDS_MBYTESPERSEC        "MB/s"//!
@@ -1980,6 +1975,33 @@ BEGIN
     IDS_WEBUPNPINCLUDE      "Incloure port en la configuració UPnP"
     IDS_ADDEDON             "Afegit"
     IDS_RESOLVELINKS        "Resolve shell links in shared directories"
+END
+
+
+STRINGTABLE 
+BEGIN
+    IDS_DOWNLOADCOMMANDS    "Download Commands"
+    IDS_CLOSETOOLBAR        "Close Toolbar"
+    IDS_SHOWTOOLBAR         "Show Toolbar"
+    IDS_SEARCH_BADOPERATORCOMBINATION 
+                            "You cannot use the first keyword with an OR operator when searching on Kad!\n\nFor example ""Keyword1 OR Keyword2"" is not possible. Try ""Keyword1 AND (Keyword2 OR Keyword3)"" or do multiple searches instead."
+    IDS_DISCOVEREDBY        "Discovered by"
+    IDS_NODES               "Node(s)"
+    IDS_ROUTINGTABLE        "Routing Table"
+    IDS_PROTOCOLVERSION     "Protocol Version"
+    IDS_FOUNDNODESUSEFUL    "Found Nodes (useful)"
+    IDS_NORESPONSE          "No Response"
+    IDS_NOTASKED            "Not Asked"
+    IDS_LOOKUPGRAPH         "Search Details"
+    IDS_AUTOKADLOOKUPGRAPH  "Automatically show active searches"
+    IDS_PAUSEONPREVIEW      "Pause when preview possible"
+    IDS_PREVIEWWITH         "Preview with"
+    IDS_CLOSEEMULE          "Close eMule"
+    IDS_DONOTASKAGAIN       "Don't ask me again"
+    IDS_POPULARITY          "Popularity Rank"
+    IDS_SHOWWIN7TASKBARGOODIES "Enable Windows 7 taskbar effects"
+    IDS_LANMODE             "LAN Mode"
+    IDS_OPENPREFINI         "Open preferences.ini"
 END
 
 #endif    // Valencian (RACV) resources
